# mcp-azure-personal

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  tofu.yml
chart/: Chart.yaml  values.yaml
chart/templates/: auth-delegator.yaml  deployment.yaml  externalsecret.yaml  proxy-config.yaml  service.yaml  serviceaccount.yaml
infra/: .terraform.lock.hcl  README.md  azure_data.tf  keyvault.tf  main.tf  providers.tf  terraform.tf  variables.tf
infra/mcp-server/: main.tf  outputs.tf  variables.tf
src/mcp_azure_personal/: auth_verifier.py  grant.py  http.py  tools.py
tests/: test_auth_verifier.py  test_break_glass_gate.py  test_caller_jwt_middleware.py  test_pg_tools.py
