[project]
name = "mcp-azure-personal"
version = "0.1.0"
description = "Personal Azure MCP tools for tank-operator sessions."
requires-python = ">=3.10"
dependencies = [
    "azure-cosmos>=4.7",
    "azure-identity>=1.25.1",
    "mcp>=1.18.0",
    "psycopg[binary]>=3.2",
    "requests>=2.32.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_azure_personal"]

[project.scripts]
mcp-azure-personal-http = "mcp_azure_personal.http:main"
