[project]
name = "mcp-azure-personal"
version = "0.1.0"
description = "Personal Azure MCP tools for tank-operator sessions."
requires-python = ">=3.10"
dependencies = [
    "azure-cosmos>=4.7",
    "azure-identity>=1.25.1",
    "mcp>=1.18.0",
    "requests>=2.32.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "romaine-auth @ git+https://github.com/nelsong6/romaine-auth-py.git@dcc052dea53061c96734024a8cfe113b12b08b79",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required for the romaine-auth git URL dependency.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_azure_personal"]

[project.scripts]
mcp-azure-personal-http = "mcp_azure_personal.http:main"
